--- a/src/styles.css
+++ b/src/styles.css
@@ -1,10 +1,19 @@
+@import url("https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap");
 @import "tailwindcss";
 
 @theme {
   --color-primary-red: hsl(340deg, 65%, 47%);
   --color-secondary-blue: hsl(240deg, 60%, 63%);
+  --color-100-gray: hsl(185deg, 5%, 95%);
+  --color-300-gray: "hsl(190deg, 5%, 80%)";
+  --color-500-gray: "hsl(196deg, 4%, 60%)";
+  --color-700-gray: "hsl(220deg, 5%, 40%)";
+  --color--900-gray: "hsl(220deg, 3%, 20%)";
+
+  --font-raleway: "Raleway", sans-serif;
 }
 
 * {
   box-sizing: border-box;
+  font-family: "Raleway", sans-serif;
 }
