add styles for superheader, fix typo on css variable

--- a/src/styles.css
+++ b/src/styles.css
@@ -8,7 +8,7 @@
   --color-gray-three: hsl(190deg, 5%, 80%);
   --color-gray-five: hsl(196deg, 4%, 60%);
   --color-gray-seven: hsl(220deg, 5%, 40%);
-  --color--gray-nine: hsl(220deg, 3%, 20%);
+  --color-gray-nine: hsl(220deg, 3%, 20%);
 
   --font-raleway: "Raleway", sans-serif;
 }
